portalinstitucional-dev-cloud/deploymentconfigs.apps.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/backup-registry-hostname: docker-registry.default.svc:5000
      openshift.io/backup-server-version: "1.11"
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/migration-registry: 172.30.176.178:5000
      openshift.io/restore-registry-hostname: image-registry.openshift-image-registry.svc:5000
      openshift.io/restore-server-version: "1.23"
    creationTimestamp: "2023-05-18T22:13:52Z"
    generation: 2
    labels:
      app: mi-escritorio-ux-v4
      migration.openshift.io/migrated-by-migmigration: fec3ec19-481f-46b7-9ae7-bff48fdea7a1
      migration.openshift.io/migrated-by-migplan: 115bf39f-32dd-46ac-8d1e-ac95f44b53ed
      velero.io/backup-name: migration-17781-initial-hpqdg
      velero.io/restore-name: migration-17781-final-nbzfx
    name: mi-escritorio-ux-v4
    namespace: portalinstitucional-dev-cloud
    resourceVersion: "6309501"
    uid: 19cb8162-36c3-4675-b6fd-052adb0e82df
  spec:
    replicas: 0
    revisionHistoryLimit: 10
    selector:
      deploymentconfig: mi-escritorio-ux-v4
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: mi-escritorio-ux-v4
          deploymentconfig: mi-escritorio-ux-v4
      spec:
        containers:
        - image: image-registry.openshift-image-registry.svc:5000/portalinstitucional-dev-cloud/mi-escritorio-ux-v4@sha256:e861fa9410ad96d0c20607e6ead5c9d505763c089bf81eae95b811987dfb5e26
          imagePullPolicy: Always
          name: mi-escritorio-ux-v4
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - mi-escritorio-ux-v4
        from:
          kind: ImageStreamTag
          name: mi-escritorio-ux-v4:latest
          namespace: portalinstitucional-dev-cloud
        lastTriggeredImage: image-registry.openshift-image-registry.svc:5000/portalinstitucional-dev-cloud/mi-escritorio-ux-v4@sha256:e861fa9410ad96d0c20607e6ead5c9d505763c089bf81eae95b811987dfb5e26
      type: ImageChange
    - type: ConfigChange
  status:
    availableReplicas: 0
    conditions:
    - lastTransitionTime: "2023-05-18T22:13:52Z"
      lastUpdateTime: "2023-05-18T22:13:52Z"
      message: Deployment config does not have minimum availability.
      status: "False"
      type: Available
    - lastTransitionTime: "2023-05-18T22:13:58Z"
      lastUpdateTime: "2023-05-18T22:13:58Z"
      message: replication controller "mi-escritorio-ux-v4-1" successfully rolled
        out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 1
    observedGeneration: 2
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
