portalinstitucional-dev-cloud/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-18T22:13:52Z"
    labels:
      app: mi-escritorio-ux-v4
      migration.openshift.io/migrated-by-migmigration: fec3ec19-481f-46b7-9ae7-bff48fdea7a1
      migration.openshift.io/migrated-by-migplan: 115bf39f-32dd-46ac-8d1e-ac95f44b53ed
      velero.io/backup-name: migration-17781-initial-hpqdg
      velero.io/restore-name: migration-17781-final-nbzfx
    name: mi-escritorio-ux-v4
    namespace: portalinstitucional-dev-cloud
    resourceVersion: "6309388"
    uid: 87e18c2f-f9a1-4f77-b2f5-b857c0ea8540
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
