portalinstitucional-dev-cloud/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-18T22:13:52Z"
    generateName: mi-escritorio-ux-v4-
    generation: 1
    labels:
      app: mi-escritorio-ux-v4
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: mi-escritorio-ux-v4
      migration.openshift.io/migrated-by-migmigration: fec3ec19-481f-46b7-9ae7-bff48fdea7a1
      migration.openshift.io/migrated-by-migplan: 115bf39f-32dd-46ac-8d1e-ac95f44b53ed
      velero.io/backup-name: migration-17781-initial-hpqdg
      velero.io/restore-name: migration-17781-final-nbzfx
    name: mi-escritorio-ux-v4-p5khf
    namespace: portalinstitucional-dev-cloud
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: mi-escritorio-ux-v4
      uid: edb1356c-367d-4c15-80a9-3a5adacb4d0f
    resourceVersion: "476054027"
    uid: e6509a67-f215-407f-81da-4b93376a31cb
  ports: null
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
