portalinstitucional-dev-cloud/routes.route.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-18T22:13:52Z"
    labels:
      app: mi-escritorio-ux-v4
      migration.openshift.io/migrated-by-migmigration: fec3ec19-481f-46b7-9ae7-bff48fdea7a1
      migration.openshift.io/migrated-by-migplan: 115bf39f-32dd-46ac-8d1e-ac95f44b53ed
      velero.io/backup-name: migration-17781-initial-hpqdg
      velero.io/restore-name: migration-17781-final-nbzfx
    name: mi-escritorio-ux-v4
    namespace: portalinstitucional-dev-cloud
    resourceVersion: "22595419"
    uid: e677d720-1242-416d-ae9b-5c63b8dc22dc
  spec:
    host: mi-escritorio-ux-v4-portalinstitucional-dev-cloud.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: mi-escritorio-ux-v4
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:07:27Z"
        status: "True"
        type: Admitted
      host: mi-escritorio-ux-v4-portalinstitucional-dev-cloud.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
