portalinstitucional-dev-cloud/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T22:13:52Z"
    labels:
      app: mi-escritorio-ux-v4
      migration.openshift.io/migrated-by-migmigration: fec3ec19-481f-46b7-9ae7-bff48fdea7a1
      migration.openshift.io/migrated-by-migplan: 115bf39f-32dd-46ac-8d1e-ac95f44b53ed
      velero.io/backup-name: migration-17781-initial-hpqdg
      velero.io/restore-name: migration-17781-final-nbzfx
    name: mi-escritorio-ux-v4
    namespace: portalinstitucional-dev-cloud
    resourceVersion: "6309404"
    uid: edb1356c-367d-4c15-80a9-3a5adacb4d0f
  spec:
    clusterIP: 172.30.214.59
    clusterIPs:
    - 172.30.214.59
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: mi-escritorio-ux-v4
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
